--- a/source/Client/BugTrap.vs2022.vcxproj.filters
+++ b/source/Client/BugTrap.vs2022.vcxproj.filters
@@ -253,6 +253,9 @@
     <ClCompile Include="StrStream.cpp">
       <Filter>Streams\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WriteProgressDlg.cpp">
+      <Filter>Dialogs\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -446,6 +449,9 @@
     </ClInclude>
     <ClInclude Include="VersionInfoString.h">
       <Filter>Accessories\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WriteProgressDlg.h">
+      <Filter>Dialogs\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
